# stocks-monitoring-agent

./: .gitignore  LICENSE  README.md  authenticate.sh  commands.sh  index.html
.kiro/steering/: kiro-behavior.md  project.md
cloudformation/: terraform-state-bucket.yaml
diagrams/: architecture.drawio
lambda_invoker/: Cargo.toml  Dockerfile  lambda_function.py
lambda_invoker/src/: main.rs
stocks_monitor_agent/: Cargo.toml  Dockerfile  requirements.txt
stocks_monitor_agent/app/: main.py
stocks_monitor_agent/app/controller/: agent_controller.py  alert_evaluator.py
stocks_monitor_agent/app/model/: config.py  stock_data.py
stocks_monitor_agent/app/repository/: browser_repository.py  dynamodb_repository.py  notification_repository.py
stocks_monitor_agent/app/service/: email_service.py  notification_service.py
stocks_monitor_agent/src/: main.rs
stocks_monitor_agent/src/controller/: agent_controller.rs  alert_evaluator.rs  mod.rs  stocks_controller.rs
stocks_monitor_agent/src/model/: config.rs  email_template.rs  mod.rs  stock_data.rs
stocks_monitor_agent/src/repository/: browser_repository.rs  claude_repository.rs  cnbc_repository.rs  dynamodb_repository.rs  mod.rs  notification_repository.rs  secrets_repository.rs  ses_repository.rs
stocks_monitor_agent/templates/: alert_email.html
terraform/: .terraform.lock.hcl  config.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
terraform/modules/agentcore_memory/: main.tf  outputs.tf  variables.tf
terraform/modules/agentcore_runtime/: main.tf  outputs.tf  variables.tf
terraform/modules/cloudwatch_logs/: main.tf  outputs.tf  variables.tf
terraform/modules/dynamodb/: main.tf  outputs.tf  variables.tf
terraform/modules/ecr/: main.tf  outputs.tf  variables.tf
terraform/modules/eventbridge/: main.tf  outputs.tf  variables.tf
terraform/modules/iam/: main.tf  outputs.tf  variables.tf
terraform/modules/lambda/: main.tf  outputs.tf  variables.tf
terraform/modules/secrets_manager/: main.tf  outputs.tf  variables.tf
terraform/modules/security_group/: main.tf  outputs.tf  (+1 more)
(+3 files in other folders)
