[package]
name = "stocks_monitor_agent"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "stocks_monitor_agent"
path = "src/main.rs"

[dependencies]
# HTTP server (AgentCore Runtime expects an HTTP endpoint)
axum = "0.7"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client for AgentCore Browser and Claude API calls
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# AWS SDKs
aws-config = "1"
aws-sdk-secretsmanager = "1"
aws-sdk-sesv2 = "1"
aws-sdk-dynamodb = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
